# ttdscw1

./: code.py  index.txt  pyproject.toml  results.boolean.txt  results.ranked.txt
examples/: collection.index.txt
