[tool.poetry]
name = "ttdscw1"
version = "0.1.0"
description = ""
authors = ["Ragnor Comerford <hello@ragnor.co>"]

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.12.0"
nltk = "^3.5"
ipykernel = "^5.3.4"
pandas = "^1.1.3"
lark-parser = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
